--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -151,7 +151,7 @@
         },
         "outputId": "52d600d8-7a95-4f46-8753-2904cea243c9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,7 +177,7 @@
         },
         "outputId": "2a74a0d2-ad33-45f5-e1c2-78fde32bf67d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,12 +193,67 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad= 5\n",
+        "print(id(edad))\n",
+        "print(id(5))\n"
+      ],
       "metadata": {
-        "id": "JC8jO47wADlm"
+        "id": "JC8jO47wADlm",
+        "outputId": "27e573ed-6246-417c-e80b-7f579ecbce8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10750984\n",
+            "10750984\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre = 'Juan'\n",
+        "\n",
+        "id('Juan')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wbRHzbZa-XOS",
+        "outputId": "94cb7bed-1e4d-49af-a5a0-1f20c1cc8353",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "140256772858032"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -249,30 +304,121 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 5"
+      ],
       "metadata": {
         "id": "J5a9t73A_-PX"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(edad)\n"
+      ],
       "metadata": {
-        "id": "rqmO1ew-_-So"
+        "id": "rqmO1ew-_-So",
+        "outputId": "101fa3a7-8f6a-4d5a-9831-24813a12d77a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = 9.5\n",
+        "type(promedio)\n"
+      ],
       "metadata": {
-        "id": "xkrPMkeY_-cP"
+        "id": "xkrPMkeY_-cP",
+        "outputId": "874b4c71-2d04-4ee3-844a-d80477464f7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre ='Cindi'\n",
+        "type('Cindi')\n"
+      ],
+      "metadata": {
+        "id": "y7lFPQxTB5MF",
+        "outputId": "089d7748-8be9-4ea2-d93d-882f5cbad8ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v = True\n",
+        "type(v)\n"
+      ],
+      "metadata": {
+        "id": "D-13LegXCVQ6",
+        "outputId": "44f5f433-3105-498d-d54a-47fcc17699f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -296,8 +442,37 @@
       "metadata": {
         "id": "FabQ7jQf_8Xt"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_estudiante = 'Penélope Camacho'\n",
+        "edad_estudiante = 11\n",
+        "promedio_estudiante = 9.75\n",
+        "aprobado = True\n",
+        "print(nombre_estudiante, edad_estudiante, promedio_estudiante, aprobado)\n",
+        "print(type(nombre_estudiante), type(edad_estudiante), type(promedio_estudiante), type(aprobado))\n"
+      ],
+      "metadata": {
+        "id": "3kLqc0FyCrr7",
+        "outputId": "adc8c1fa-13a2-4f42-a659-7702d74b13bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Penélope Camacho 11 9.75 True\n",
+            "<class 'str'> <class 'int'> <class 'float'> <class 'bool'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -342,30 +517,128 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "c_vigilante = 5\n",
+        "s_vigilante = 300\n",
+        "\n",
+        "c_docente = 16\n",
+        "s_docente = 500\n",
+        "\n",
+        "c_coordinador = 2\n",
+        "s_coordinador = 600\n"
+      ],
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_empleados = c_vigilante + c_docente + c_coordinador\n",
+        "total_empleados\n"
+      ],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "gKmBbhII_5b9",
+        "outputId": "50560d11-4f11-4ccf-ea3a-347c9f36b95d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diferencia_salarios = s_coordinador - s_vigilante\n",
+        "diferencia_salarios\n"
+      ],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "fIugsxNy_53j",
+        "outputId": "32b7da7c-d502-441f-f6da-9d54cd5076bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "300"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio_salarios = (s_vigilante * c_vigilante +s_docente * c_docente + s_coordinador * c_coordinador) / (c_vigilante + c_docente + c_coordinador)\n",
+        "promedio_salarios"
+      ],
+      "metadata": {
+        "id": "wut3mkc8FBEr",
+        "outputId": "7e14c483-90b6-4a1d-9ac1-f89ff0b662f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(promedio_salarios)\n"
+      ],
+      "metadata": {
+        "id": "n_Y0OscXFn68",
+        "outputId": "77c128ae-c2b1-4552-afc4-d365ed0bee16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
