--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -200,10 +200,10 @@
       ],
       "metadata": {
         "id": "JC8jO47wADlm",
-        "outputId": "27e573ed-6246-417c-e80b-7f579ecbce8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "27e573ed-6246-417c-e80b-7f579ecbce8a"
       },
       "execution_count": 1,
       "outputs": [
@@ -235,11 +235,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "wbRHzbZa-XOS",
-        "outputId": "94cb7bed-1e4d-49af-a5a0-1f20c1cc8353",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wbRHzbZa-XOS",
+        "outputId": "94cb7bed-1e4d-49af-a5a0-1f20c1cc8353"
       },
       "execution_count": 4,
       "outputs": [
@@ -320,10 +320,10 @@
       ],
       "metadata": {
         "id": "rqmO1ew-_-So",
-        "outputId": "101fa3a7-8f6a-4d5a-9831-24813a12d77a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "101fa3a7-8f6a-4d5a-9831-24813a12d77a"
       },
       "execution_count": 6,
       "outputs": [
@@ -347,10 +347,10 @@
       ],
       "metadata": {
         "id": "xkrPMkeY_-cP",
-        "outputId": "874b4c71-2d04-4ee3-844a-d80477464f7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "874b4c71-2d04-4ee3-844a-d80477464f7d"
       },
       "execution_count": 7,
       "outputs": [
@@ -373,11 +373,11 @@
         "type('Cindi')\n"
       ],
       "metadata": {
-        "id": "y7lFPQxTB5MF",
-        "outputId": "089d7748-8be9-4ea2-d93d-882f5cbad8ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y7lFPQxTB5MF",
+        "outputId": "089d7748-8be9-4ea2-d93d-882f5cbad8ac"
       },
       "execution_count": 8,
       "outputs": [
@@ -400,11 +400,11 @@
         "type(v)\n"
       ],
       "metadata": {
-        "id": "D-13LegXCVQ6",
-        "outputId": "44f5f433-3105-498d-d54a-47fcc17699f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D-13LegXCVQ6",
+        "outputId": "44f5f433-3105-498d-d54a-47fcc17699f2"
       },
       "execution_count": 9,
       "outputs": [
@@ -456,11 +456,11 @@
         "print(type(nombre_estudiante), type(edad_estudiante), type(promedio_estudiante), type(aprobado))\n"
       ],
       "metadata": {
-        "id": "3kLqc0FyCrr7",
-        "outputId": "adc8c1fa-13a2-4f42-a659-7702d74b13bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3kLqc0FyCrr7",
+        "outputId": "adc8c1fa-13a2-4f42-a659-7702d74b13bf"
       },
       "execution_count": 12,
       "outputs": [
@@ -541,10 +541,10 @@
       ],
       "metadata": {
         "id": "gKmBbhII_5b9",
-        "outputId": "50560d11-4f11-4ccf-ea3a-347c9f36b95d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "50560d11-4f11-4ccf-ea3a-347c9f36b95d"
       },
       "execution_count": 14,
       "outputs": [
@@ -568,10 +568,10 @@
       ],
       "metadata": {
         "id": "fIugsxNy_53j",
-        "outputId": "32b7da7c-d502-441f-f6da-9d54cd5076bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32b7da7c-d502-441f-f6da-9d54cd5076bb"
       },
       "execution_count": 15,
       "outputs": [
@@ -594,11 +594,11 @@
         "promedio_salarios"
       ],
       "metadata": {
-        "id": "wut3mkc8FBEr",
-        "outputId": "7e14c483-90b6-4a1d-9ac1-f89ff0b662f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wut3mkc8FBEr",
+        "outputId": "7e14c483-90b6-4a1d-9ac1-f89ff0b662f0"
       },
       "execution_count": 16,
       "outputs": [
@@ -620,11 +620,11 @@
         "type(promedio_salarios)\n"
       ],
       "metadata": {
-        "id": "n_Y0OscXFn68",
-        "outputId": "77c128ae-c2b1-4552-afc4-d365ed0bee16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n_Y0OscXFn68",
+        "outputId": "77c128ae-c2b1-4552-afc4-d365ed0bee16"
       },
       "execution_count": 17,
       "outputs": [
@@ -662,12 +662,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "t = 'Alura'\n",
+        "type(t)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "ityEWqvh_2wK"
+        "id": "ityEWqvh_2wK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef79a89c-3c8f-411d-fd67-ac353eec2d42"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -699,13 +718,29 @@
     {
       "cell_type": "code",
       "source": [
-        "texto = '  Micaela de los Sanyos '"
+        "texto = '  Micaela de los Sanyos '\n",
+        "id(texto)\n"
       ],
       "metadata": {
-        "id": "icDWtYTjBO0n"
+        "id": "icDWtYTjBO0n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e9187da-f07b-455a-a97c-ee1188071f8c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "140256650846224"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -732,12 +767,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.upper()\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "wMVshJrY_ZXh"
+        "id": "wMVshJrY_ZXh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "130edfcd-4898-4226-a9ea-f2de2ec4420c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  MICAELA DE LOS SANYOS '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -751,9 +808,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "texto.lower()\n"
+      ],
+      "metadata": {
+        "id": "px3yEeNH_YK4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ae1b34fc-11d7-458e-e7ff-1a9fb59a1bf5"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  micaela de los sanyos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "px3yEeNH_YK4"
+        "id": "s1yNeWitHk3o"
       },
       "execution_count": null,
       "outputs": []
@@ -770,12 +857,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.strip()\n"
+      ],
       "metadata": {
-        "id": "76dLgNa4_XAe"
+        "id": "76dLgNa4_XAe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a0b8f276-1ab7-4638-91ba-eb881625ec66"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Micaela de los Sanyos'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -790,12 +898,142 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.replace('y','t')\n"
+      ],
       "metadata": {
-        "id": "PNXAixtE_V6R"
+        "id": "PNXAixtE_V6R",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "7658be1f-804e-40bd-85bf-ec63b9ad8515"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  Micaela de los Santos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "texto\n"
+      ],
+      "metadata": {
+        "id": "w961om7uH4wy",
+        "outputId": "ae745082-7df6-4d8d-dfa0-3c93e2794753",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  Micaela de los Sanyos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(texto)\n"
+      ],
+      "metadata": {
+        "id": "rXQTIjgeH_Q5",
+        "outputId": "6be36274-b66b-484a-ef9e-7757b4fb442a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "140256650846224"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nuevo_texto = texto.strip().replace('y','t').upper()\n",
+        "print(nuevo_texto)\n",
+        "print(id(nuevo_texto))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DiX1cNwPIUsn",
+        "outputId": "aef47fc7-8f80-4b17-857a-163119e38591",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MICAELA DE LOS SANTOS\n",
+            "140256650848064\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "texto = texto.strip().replace('y','t').upper()\n",
+        "print(texto)\n",
+        "print(id(texto))\n"
+      ],
+      "metadata": {
+        "id": "T1eXYzVqJIvY",
+        "outputId": "4233898d-c4bc-4302-85ae-6e5d5008a9b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MICAELA DE LOS SANTOS\n",
+            "140256650472592\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
