--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -205,7 +205,7 @@
         },
         "outputId": "27e573ed-6246-417c-e80b-7f579ecbce8a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
         "id": "wbRHzbZa-XOS",
         "outputId": "94cb7bed-1e4d-49af-a5a0-1f20c1cc8353"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +310,7 @@
       "metadata": {
         "id": "J5a9t73A_-PX"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
         },
         "outputId": "101fa3a7-8f6a-4d5a-9831-24813a12d77a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
         },
         "outputId": "874b4c71-2d04-4ee3-844a-d80477464f7d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
         "id": "y7lFPQxTB5MF",
         "outputId": "089d7748-8be9-4ea2-d93d-882f5cbad8ac"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +406,7 @@
         "id": "D-13LegXCVQ6",
         "outputId": "44f5f433-3105-498d-d54a-47fcc17699f2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "FabQ7jQf_8Xt"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
         "id": "3kLqc0FyCrr7",
         "outputId": "adc8c1fa-13a2-4f42-a659-7702d74b13bf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +530,7 @@
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -546,7 +546,7 @@
         },
         "outputId": "50560d11-4f11-4ccf-ea3a-347c9f36b95d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
         },
         "outputId": "32b7da7c-d502-441f-f6da-9d54cd5076bb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
         "id": "wut3mkc8FBEr",
         "outputId": "7e14c483-90b6-4a1d-9ac1-f89ff0b662f0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
         "id": "n_Y0OscXFn68",
         "outputId": "77c128ae-c2b1-4552-afc4-d365ed0bee16"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +674,7 @@
         },
         "outputId": "ef79a89c-3c8f-411d-fd67-ac353eec2d42"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +728,7 @@
         },
         "outputId": "3e9187da-f07b-455a-a97c-ee1188071f8c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -779,7 +779,7 @@
         },
         "outputId": "130edfcd-4898-4226-a9ea-f2de2ec4420c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +819,7 @@
         },
         "outputId": "ae1b34fc-11d7-458e-e7ff-1a9fb59a1bf5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +868,7 @@
         },
         "outputId": "a0b8f276-1ab7-4638-91ba-eb881625ec66"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +909,7 @@
         },
         "outputId": "7658be1f-804e-40bd-85bf-ec63b9ad8515"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -939,7 +939,7 @@
           "height": 35
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -968,7 +968,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +997,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,7 +1023,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1099,7 +1099,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = input('Escribe tu nombre: ')\n"
+      ],
+      "metadata": {
+        "id": "mfZ8G65Z7jO2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nombre)\n"
+      ],
       "metadata": {
         "id": "zbH_9i3q_PdY"
       },
