--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1155,7 +1155,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ano_admision =input('Digita año de admisión: ')\n"
+      ],
       "metadata": {
         "id": "M2ueeH6l_NMe"
       },
