--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1100,7 +1100,11 @@
     {
       "cell_type": "code",
       "source": [
-        "nombre = input('Escribe tu nombre: ')\n"
+        "nombre = input('Escribe tu nombre: ')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "mfZ8G65Z7jO2"
@@ -1114,19 +1118,25 @@
         "type(nombre)\n"
       ],
       "metadata": {
-        "id": "zbH_9i3q_PdY"
+        "id": "JZy1Q9Tl_PgL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0b0b1b1-f4b5-4270-c112-b1f72cf99215"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "JZy1Q9Tl_PgL"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1156,19 +1166,10 @@
     {
       "cell_type": "code",
       "source": [
-        "ano_admision =input('Digita año de admisión: ')\n"
+        "\n"
       ],
       "metadata": {
         "id": "M2ueeH6l_NMe"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xfWwuViK_NUn"
       },
       "execution_count": null,
       "outputs": []
