--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1166,6 +1166,8 @@
     {
       "cell_type": "code",
       "source": [
+        "ano_admision = input('Digita el año de admisión')\n",
+        "\n",
         "\n"
       ],
       "metadata": {
